<resources>
    <string name="app_name">ACube</string>
    <string name="enter">Enter Number</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="sign_in_sign_up">Sign In/Sign Up</string>
    <string name="image">image</string>
    <string name="welcome_user">welcome user</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shipping_amp_delivery"><![CDATA[Shipping & Delivery]]></string>
    <string name="refund_amp_cancellation"><![CDATA[Refund & Cancellation]]></string>
    <string name="more">More</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="privacy_amp_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="terms">Terms</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="membership">Membership</string>
    <string name="watch_later">Watch Later</string>
    <string name="recently_watched">Recently Watched</string>
    <string name="logout">Logout</string>
</resources>