<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/image"
        android:src="@drawable/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:visibility="visible">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/sign_in_sign_up"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/enter_your_mobile_number"
            android:textColor="#05060B"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <LinearLayout
            android:id="@+id/phoneContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/line_border_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/label">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccpDialog_showFlag="false"
                app:ccpDialog_textColor="@color/black"
                app:ccp_arrowColor="@color/black"
                app:ccp_arrowSize="10dp"
                app:ccp_contentColor="@color/black"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="true"
                app:ccp_textSize="14sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint= "@string/enter"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginVertical="25dp"
            android:backgroundTint="@color/green"
            android:text="Login"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/phoneContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:visibility="gone">

        <TextView
            android:id="@+id/verify_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="Verify Otp"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/verify_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/enter_your_mobile_number"
            android:textColor="#05060B"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verify_title" />

        <com.square.acube.utils.OtpEditText
            android:id="@+id/otpView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:cursorVisible="false"
            android:inputType="number"
            android:maxLength="6"
            android:textIsSelectable="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verify_label"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/otpSentView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="5sp"
            android:text=""
            android:textColor="#05060B"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otpView" />

        <TextView
            android:id="@+id/textVerified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="5sp"
            android:text="OTP Verified"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="#6BD505"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otpView" />

        <TextView
            android:id="@+id/reSendOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="5sp"
            android:text="Resend"
            android:textColor="#05060B"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otpSentView" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/green"
            android:text="Submit"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reSendOtp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>